# taskwatch

./: .gitignore  LICENSE.md  Makefile  README.md  main.py  pyproject.toml
taskwatch/: __main__.py  export.py  io.py  report.py  session.py  store.py  watch.py
testwatch/: __main__.py  export.py  io.py  report.py  session.py  store.py  watch.py
