[tool.poetry]
name = "taskwatch"
version = "0.1.0"
description = ""
authors = ["Kirill Gashkov <kirill@gashkov.com>"]
readme = "README.md"

[tool.poetry.scripts]
taskwatch = "taskwatch.__main__:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.10.1"
black = "^24.3.0"
mypy = "^0.960"

[tool.isort]
profile = "black"
known_first_party = ["taskwatch"]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
